--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body{
 
 .assignment {
     display:flex;
-    padding: 10px; I
+    padding: 10px;
+    margin: 10px;
     background: lightgray;
 }
 
