--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,30 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.assignments{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .assignment {
-    display:flex;
+    width: 22%;
     padding: 10px;
     margin: 10px;
+    padding: 20px 10;
     background: lightgray;
 }
 
 .assignment img {
     width: 200px;
     padding: 10px;
+    display: block;
+    margin: auto;
 }
-
+h2{
+    text-align: center;
+}
 
 h1{
     color: darkorchid;
     text-align: center;
 }
-
